--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: All about Lillian Hogendoorn.
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/0058.jpg
+picture: assets/images/IMG_0254 2.jpeg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
