--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ width: large
 
 # if you don't need pagination, comment the *paginate* configs below
 paginate: 5
-paginate_path: "blog/:num/"
+paginate_path: "notes/:num/"
 
 # if you don't need projects, comment the *projects* configs below
 projects: false
